--- a/app/client/stylesheets/components/pu-form.sass
+++ b/app/client/stylesheets/components/pu-form.sass
@@ -28,7 +28,7 @@
             margin-top: 10px
 
         .pu-button-text-subtle
-            margin-right: 10px
+            margin-right: 20px - 4px
 
     &:not(.pu-form-disableinvalidstates):invalid
         [type="submit"]
